force-app/main/default/objects/Case_Product__c/fields/Return_percentage__c.field-meta.xml
<CustomField>
    <fullName>Return_percentage__c</fullName>
    <description>Enter percent of value you want to return to client.</description>
    <label>Return percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>