force-app/main/default/objects/Case_Product__c/fields/ToExternal__c.field-meta.xml
<CustomField>
    <fullName>ToExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToExternal</label>
    <type>Checkbox</type>
</CustomField>