force-app/main/default/objects/Case_Product__c/validationRules/Full_or_parially_refund_enter_percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Full_or_parially_refund_enter_percentage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(
ISPICKVAL(Strategy__c, &quot;Full refund&quot;),
ISPICKVAL(Strategy__c, &quot;Partially refund&quot;)
), ISBLANK( Return_percentage__c ))</errorConditionFormula>
    <errorDisplayField>Return_percentage__c</errorDisplayField>
    <errorMessage>Enter the percentage you want to return to client.</errorMessage>
</ValidationRule>