force-app/main/default/objects/Case_Product__c/validationRules/Master_detail_wordaround.validationRule-meta.xml
<ValidationRule>
    <fullName>Master_detail_wordaround</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Specify the product.</errorMessage>
</ValidationRule>